Change button color for contrast corrections

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 button {
   color: white;
-  background-color: #36b37f;
+  background-color:#1D6249;
   padding: 0.8rem;
   border-radius: 7px;
   letter-spacing: 0.3px;
